project/k8s/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: authentication-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
      - name: authentication-service
        image: "eyupcanbay/auth-service:v1.0.3"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports: 
          - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz      
            port: 80
          initialDelaySeconds: 5  
          periodSeconds: 5      
        
        livenessProbe:
          httpGet:
            path: /healthz     
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20    
---
apiVersion: v1
kind: Service 
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication-service
  ports: 
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
