project/k8s/broker-service.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: broker-service
spec:
  replicas: 4
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      containers:
      - name: broker-service
        image: "eyupcanbay/broker-service:latest"
        resources: 
          requests: 
            memory: "64Mi"
            cpu: "250m"
          limits: 
            memory: "128Mi"
            cpu: "250m"
        ports: 
          - containerPort: 80
---

apiVersion: v1
kind: Service 
metadata:
  name: broker-service
spec:
  selector:
    app: broker-service
  ports: 
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
