project/k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: "rabbitmq:3.9-management"   
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports: 
          - containerPort: 5672   
          - containerPort: 15672  

---
apiVersion: v1
kind: Service 
metadata:
  name: rabbitmq
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports: 
    - protocol: TCP
      name: amqp
      port: 5672
      targetPort: 5672
    - protocol: TCP
      name: ui
      port: 15672
      targetPort: 15672
